[build-system]
requires = ["hatchling", "hatch-fancy-pypi-readme"]
build-backend = "hatchling.build"

[project]
name = "yafowil.yaml"
version = "3.0.0.dev0"
description = "YAFOWIL - YAML/JSON-parser for widget trees."
readme = "README.rst"
license = {text = "Simplified BSD"}
authors = [{name = "Yafowil Contributors", email = "dev@conestack.org"}]
keywords = ["html", "input", "widgets", "form", "compound"]
classifiers = [
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "License :: OSI Approved :: BSD License",
]
dependencies = [
    "yafowil>3.99",
    "PyYAML",
]

[project.optional-dependencies]
test = [
    "pytest",
]

[tool.hatch.metadata.hooks.fancy-pypi-readme]
content-type = "text/x-rst"
fragments = [
    {path = "README.rst"},
    {text = "\n\n"},
    {path = "CHANGES.rst"},
    {text = "\n\n"},
    {path = "LICENSE.rst"},
]

[tool.hatch.build.targets.sdist]
exclude = [
    "/.github/",
    "/Makefile",
    "/mx.ini",
]

[tool.hatch.build.targets.wheel]
packages = ["src/yafowil"]

[tool.pytest.ini_options]
consider_namespace_packages = true
addopts = ["--import-mode=importlib"]
pythonpath = "src"

[tool.zest-releaser]
create-wheel = true
